# tb-python-spotnews

./: .gitignore  README.md  dev-requirements.txt  manage.py  pyproject.toml  requirements.txt
database/: 01_create_database.sql
news/: admin.py  forms.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_users.py  0002_users_news.py
news/models/: __init__.py  category_model.py  news_model.py  user_model.py
news/scripts/: data.py  seeds.py
news/static/css/: style.css
news/templates/: base.html  categories_form.html  home.html  news_details.html  news_form.html
news_rest/serializers/: categories_serializer.py  news_serializer.py  users_serializer.py
news_rest/views/: categories_view.py  news_view.py  users_view.py
spotnews/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
static/: README.md
