[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "spotnews" # TODO: ALTERAR
version = "0.1.0"
description = "" # TODO: PREENCHER
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
    "rich==13.4.1",
    "typer==0.9.0",
    "shellingham==1.5.0.post1", 
    "Django==4.2.3",
    "django-extensions==3.2.3",
    "django-filter==23.2",
    "djangorestframework==3.14.0",
    "Markdown==3.4.4",
    "markdown-it-py==2.2.0",
    "mysqlclient==2.2.0",
    "Pillow==10.0.0",
    "whitenoise==6.5.0",
]

[project.scripts]
spotnews = "spotnews.__main__:typer_app"

[tool.setuptools]
py-modules = ['spotnews']

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "spotnews.settings_test"
minversion = "7.3"
addopts = "-vv -s --continue-on-collection-errors"
testpaths = ["tests",]
accept_xfail = true
filterwarnings = [
    "ignore::pytest.PytestDeprecationWarning",
]



[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79

[project.optional-dependencies]
test = [
    "pytest-dependency@git+https://github.com/betrybe/pytest-dependency@984f9d7d083870d091e8862a9b9c33fdf815b8d9",
    "faker==18.9.0",
    "pytest==7.3.1",
    "pytest-cov==4.1.0",
    "pytest-json==0.4.0",
    "pytest-django==4.5.2",
    "beautifulsoup4==4.12.2",
]
alltest = [
    "spotnews[test]",
    "coverage==7.2.6",
    "iniconfig==2.0.0",
    "packaging==23.1",
    "pluggy==1.0.0",
]
dev = [
    "spotnews[test]",
    "black==23.3.0",
    "flake8==6.0.0",
    "isort==5.12.0",
]
alldev = [
    "spotnews[dev]",
    "spotnews[alltest]",
    "click==8.1.3",
    "mccabe==0.7.0",
    "pathspec==0.11.1",
    "platformdirs==3.5.1",
    "pycodestyle==2.10.0",
    "pyflakes==3.0.1",
]
